<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regular2red"
    tools:context=".Commoner_Registration_Page">

    <EditText
        android:id="@+id/comm_uname"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:background="@drawable/edittxt_commonerlogin"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/hint_c"/>

    <EditText
        android:id="@+id/edittxt_comm_phone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/comm_uname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittxt_commonerlogin"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/hint_c"/>

    <EditText
        android:id="@+id/edittxt_comm_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edittxt_comm_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittxt_commonerlogin"
        android:hint="@string/enter_email_id"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/hint_c"/>

    <EditText
        android:id="@+id/edittxt_comm_pass"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edittxt_comm_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittxt_commonerlogin"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/hint_c"/>

    <Button
        android:id="@+id/btn_commoner_Register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittxt_comm_pass"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/btn_red"
        android:text="Register"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/already_have_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittxt_comm_pass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="100dp"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/t_b"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/edittxt_comm_pass"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="101dp"
        android:layout_marginBottom="81dp"
        android:visibility="gone" />


</RelativeLayout>