<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regular2red"
    tools:context=".Commoner_Login_Page">

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_email_id"
        android:id="@+id/comm_email_edittxt"
        android:textAlignment="center"
        android:textColorHint="#797985"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittxt_commonerlogin"
        android:layout_marginTop="370dp"/>

    <EditText
        android:id="@+id/comm_password_edittxt"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/comm_email_edittxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittxt_commonerlogin"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="#797985" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comm_password_edittxt"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:id="@+id/btn_commoner_Login"
        android:textColor="@color/white"
        android:text="@string/login"
        android:background="@drawable/btn_red"/>

    <TextView
        android:id="@+id/dont_have_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comm_password_edittxt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="100dp"
        android:text="Don't have an account?"
        android:textAlignment="center"
        android:textColor="@color/t_b"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/comm_password_edittxt"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="81dp"
        android:visibility="gone" />


</RelativeLayout>